# drift-swift

./: .beta_dev_wallet.json  .devnet_wallet.json  .env.swift  .gitignore  .new_test_wallet.json  .new_test_wallet2.json  .new_wallet_array.json  .new_wallet_base58.json  .new_wallet_pubkey.txt  .pre-commit-config.yaml  .swift_test_wallet.json  .valid_wallet.json  =2.7.0  =41.0.0  BETA_LAUNCH_CHECKLIST.md  BUG_TRACKING.md  CHANGELOG.md  ENVIRONMENT_SETUP_README.md  GRAFANA_SETUP.md  LOGGING_QUICK_REFERENCE.md  LOGGING_SYSTEM_SUMMARY.md  MM_BOT_SIGNATURE_FIX_SUMMARY.md  MM_BOT_VERIFICATION_GUIDE.md  Makefile  README-merged.md  README-operator.md  README.md  README_APPLY_RELEASE_1_01.md  README_REAL_BETA_TRADING.md  README_REAL_TRADING.md  README_SWIFT_MM.md  README_v1_17_0_rc2.md  REGRESSION_CHECKLIST.md  RELEASE_NOTES_v0.9.1.md  RELEASE_NOTES_v0_9.md  RELEASE_NOTES_v1.17.0-RC2.md  RPC_FAILOVER_README.md  SOLANA_INSTALL_README.md  VERSION  airdrop_sol.py  (+144 more)
drift-bots/: .env.example  Dockerfile  Makefile  README.md  README_REDIS.md  auto_generated_keypair.json  bot.env.addon.txt  check_current_pnl.py  check_pnl.py  check_wallet_balance.py  comprehensive_pnl_dashboard.py  create_devnet_wallet.py  debug_driftpy.py  debug_driftpy_place_order.py  docker-compose.redis.yml  docker-compose.yml  drift_bot_test_report_1756260803.json  drift_bot_test_report_1756261126.json  drift_order_1756231821.json  final_driftpy_solution.py  find_funded_wallet.py  fixed_drift_client.py  funded_wallet.json  hybrid_trading_solution.py  live_pnl_dashboard.py  live_swift_dashboard.py  live_trading_dashboard.py  monitor_bots.py  place_real_order.py  place_real_trade.py  place_real_trade_final.py  pyproject.toml  quick_pnl_check.py  real_drift_orders.py  real_drift_protocol.py  real_drift_protocol_final.py  real_drift_protocol_fixed.py  real_drift_protocol_working.py  real_drift_protocol_working_final.py  real_swift_integration.py  (+26 more)
drift-bots/bots/: __init__.py
drift-bots/bots/hedge/: __init__.py  main.py
drift-bots/bots/jit/: __init__.py  main.py
drift-bots/bots/trend/: __init__.py  main.py
drift-bots/bots_backup/: __init__.py
drift-bots/bots_backup/hedge/: main.py
drift-bots/bots_backup/jit/: __init__.py  main.py
drift-bots/bots_backup/trend/: __init__.py  main.py
drift-bots/configs/core/: drift_client.yaml
drift-bots/configs/hedge/: routing.yaml
drift-bots/configs/jit/: params.yaml
drift-bots/configs/prometheus/: prometheus.yml
drift-bots/configs/risk/: risk_modes.yaml
drift-bots/configs/trend/: filters.yaml
drift-bots/libs/: __init__.py  flags.py  market_data.py  metrics.py
drift-bots/libs/drift/: __init__.py  client.py  data_layer.py  driver_factory.py  real_driftpy_client.py  real_orderbook.py  swift_driver.py
drift-bots/libs/risk/: __init__.py  kill_switch.py
drift-bots/orchestrator/: __init__.py  main.py
drift-bots/scripts/: seed_flags.py
drift-bots/tests/: test_drift_client.py  test_hedge_main.py  test_trend_main.py
files/: Makefile  README_v0_9.md  pyproject.toml  requirements.txt
files/scripts/: seed_flags.py
files/tests/: test_drift_client.py
libs/: metrics.py  (+3 more)
(+116 files in other folders)
