[project]
name = "drift-bots"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "websockets>=12.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "B", "A", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["\\.venv", "build", "dist", "\.github"]
